# "ami" - Aldaron's Memory Interface
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Douglas P. Lau 2017.
# Copyright Jeron A. Lau 2017 - 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "ami"
version = "0.13.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
	"Douglas Lau <doug.p.lau@gmail.com>",
]
license = "BSL-1.0"
documentation = "https://docs.rs/ami"
homepage = "https://plopgrizzly.com/ami"
repository = "https://github.com/plopgrizzly/ami"
readme = "README.md"
description = "Useful data structures that are not in the standard library."
keywords = [ "memory", "octree", "math", "geometry" ]
categories = [ "os", "data-structures", "memory-management" ]

[dependencies]
cgmath = "0.16"
