# Copyright Jeron A. Lau 2017-2018.
# Copyright Douglas Lau 2017
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)
#
# XXXX  X                    /5\——————/5\       XXXX      X           X
# X   X X   XXX   XXXX      |   0    0   |     X      XXX   XXXX XXXX X X   X
# X   X X  X   X  X   X  /"\|     <>     |/"\  X      X   X    X    X X X   X
# XXXX  X  X   X  X   X  \  \\_  ====  _//  /  X   XX X   X   X    X  X  X X
# X     X  X   X  XXXX    \_              _/   X    X X   X  X    X   X   X
# X     X   XXX   X       / \            / \    XXXX  X   X XXXX XXXX X   X
#                 X       \                /                            XX
#                          --____________--

[package]
name = "ami"
version = "0.13.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
	"Douglas Lau <doug.p.lau@gmail.com>",
]
license = "MIT / BSL-1.0"
documentation = "https://docs.rs/ami"
homepage = "https://gitlab.com/plopgrizzly/adi"
repository = "https://github.com/plopgrizzly/ami"
readme = "README.md"
description = "Useful data structures that are not in the standard library."
keywords = [ "memory", "octree", "math", "geometry" ]
categories = [ "os", "data-structures", "memory-management" ]

[dependencies]
cgmath = "0.16"
