[package]
name = "ami"
version = "0.13.1"
license = "MIT / BSL-1.0"
documentation = "https://docs.rs/ami"
homepage = "https://github.com/AldaronLau/ami"
repository = "https://github.com/AldaronLau/ami"
readme = "README.md"
description = "Useful data structures that are not in the standard library."
keywords = [ "memory", "octree", "math", "geometry" ]
categories = [ "os", "data-structures", "memory-management" ]

[badges.maintenance]
status = "deprecated"

[dependencies]
cgmath = "0.16"
